fix::title added

--- a/masalalar/index3.html
+++ b/masalalar/index3.html
@@ -10,7 +10,7 @@
       crossorigin="anonymous"
     />
 
-    <title>Document</title>
+    <title>3-masala</title>
   </head>
   <body
     class="d-flex flex-column align-items-center justify-content-center bg-secondary-subtle"
